--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.password=springstudent
 spring.main.banner-mode=off
 #Reduce logging
 logging.level.root=warn
+
+#Spring Data REST properties
+spring.data.rest.base-path=/magic-api
