refactor and security added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,12 @@ spring.main.banner-mode=off
 #Reduce logging
 logging.level.root=warn
 
+
+#Spring security
+spring.security.user.name=test
+spring.security.user.password=test123
+#show more logs
+#logging.level.org.springframework.security=DEBUG
+
 #Spring Data REST properties
 spring.data.rest.base-path=/magic-api
